--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "gitment": "^0.0.3",
     "marked": "^15.0.3",
     "vue": "^3.5.12",
+    "vue-git-comment": "^0.1.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
